--- a/src/components/ApartmentDetail/ApartmentDetail.css
+++ b/src/components/ApartmentDetail/ApartmentDetail.css
@@ -1,7 +1,7 @@
 .apartment-detail-container {
   max-width: 1200px;
   margin: 150px auto;
-  padding: 0 20px;
+ 
 }
 
 .main-image-container {
@@ -225,7 +225,7 @@
 
 @media (max-width: 480px) {
   .apartment-detail-container {
-    max-width: 438px;
+    max-width:  464px;
     width: 100%;
     margin: 30px 0;
   }
@@ -298,3 +298,16 @@
     font-size: 13px;
   }
 }
+
+@media (max-width: 414px) {
+  
+  .apartment-detail-container {
+    max-width:  404px;
+    width: 100%;
+    margin: 30px 0;
+  }
+
+
+}
+
+
