--- a/src/components/Should/Should.css
+++ b/src/components/Should/Should.css
@@ -152,3 +152,13 @@
     font-size: 22px;
   }
 }
+
+@media (max-width: 376px) {
+  .vtg-feature-card{
+    height:195px;
+    width: 165px;
+  }
+  .vtg-grid-container{
+    place-items: center;
+  }
+}
