--- a/src/components/TourDetail/TourDetail.css
+++ b/src/components/TourDetail/TourDetail.css
@@ -1,7 +1,7 @@
 .tour-detail-container {
   max-width: 1200px;
   margin: 150px auto 20px auto;
-  padding: 0 20px;
+  padding: 0 16px;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
@@ -124,7 +124,7 @@
 @media (max-width: 768px) {
   .tour-detail-container {
     margin: 16px auto;
-    padding: 0 8px; /* Giảm padding */
+    
   }
 
   .main-image-container {
@@ -186,6 +186,18 @@
     width: 400px;
     margin: 0  auto;
   }
+}
+
+@media (max-width: 414px) {
+  
+  .tour-detail-container {
+    max-width: 384px;
+    
+}
+.ant-modal-content{
+  width: 90%;
+}
+
 }
 
 .ant-typography {
