--- a/src/components/AboutList/Aboutculture/Culture.css
+++ b/src/components/AboutList/Aboutculture/Culture.css
@@ -26,7 +26,8 @@
 
 @media (max-width: 1024px) {
   .container-culture {
-    padding: 0 15px;
+    
+    max-width: 990px;
   }
   .description-culture {
     width: 100%;
