--- a/src/components/Foryou/Foryou.css
+++ b/src/components/Foryou/Foryou.css
@@ -52,7 +52,8 @@
 
 @media (max-width: 1024px) {
   .foryou-container {
-    /* padding: 0 20px; */
+    width: 100%;
+    max-width: 1000px;
   }
 
   .icon-grid-container {
