--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,14 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+}
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 a {
@@ -24,6 +32,7 @@ body {
   margin: 0;
   /* display: flex; */
   place-items: center;
+  
   min-width: 320px;
   min-height: 100vh;
 }
