--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
 #root {
   text-align: center;
 }
+html, body {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+
 
 .logo {
   height: 6em;
