--- a/src/components/AboutList/AboutGCP/AboutGCP.css
+++ b/src/components/AboutList/AboutGCP/AboutGCP.css
@@ -163,11 +163,12 @@
     }
 
     .company-info {
-        max-width: 100%;
+        max-width: 95%;
         padding: 10px;
     }
     .company-info p {
         font-size: 16px;
+        text-align: justify
     }
 
     .info-grid {
