--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -116,3 +116,50 @@
   color: white;
   font-weight: bold;
 }
+
+@media (max-width:1024px){
+  .blog-page{
+    margin : 50px auto 10px auto;
+  }
+  .blog-title{
+    font-size: 20px;
+  }
+  .blog-description{
+    font-size: 16px;
+  }
+  .blog-meta{
+    font-size: 16px;
+  }
+}
+@media (max-width:768px){
+  .blog-card img{
+    width: 50%;
+  }
+  .blog-content {
+    width: 50%; 
+  }
+  .blog-title{
+    font-size: 18px;
+  }
+  .blog-description{
+    font-size: 14px;
+  }
+}
+@media (max-width:480px){
+  .blog-card {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+  .blog-card img{
+    width: 100%;
+    height: 40%;
+  }
+  .blog-content {
+    width: 100%; 
+  }
+  .blog-page{
+    margin-top: 30px;
+  }
+  
+}
