--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -42,6 +42,7 @@
   display: flex;
   flex-direction: column;
   margin: 0;
+  align-items: end;
   z-index: 1000; /* Ensure it appears above the overlay */
 }
 .select-nav {
@@ -186,6 +187,7 @@
 
 /* Responsive cho màn hình nhỏ hơn 768px (Điện thoại) */
 @media (max-width: 768px) {
+
   .header {
     height: 70px;
   }
@@ -204,16 +206,24 @@
 
   .header-nav {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 10px;
-    text-align: center;
+    padding: 10px;
+  } 
+  .header-nav::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #d3c3c3;
+    margin-top: 10px;
   }
 
   .header-select {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
-    padding-top: 10px;
+    padding: 10px;
     gap: 10px;
   }
   .header-container {
@@ -271,6 +281,9 @@
   .header {
     height: auto; /* Allow the header to expand based on content */
     padding-bottom: 20px; /* Add padding to ensure dropdown visibility */
+  }
+  .header-nav::after{
+    display: none;
   }
 
   .header-container {
@@ -356,8 +369,11 @@
   .header-select {
     font-size: 14px;
     gap: 8px;
-    margin: 10px;
-    align-items: flex-start;
+    margin: 10px 0;
+    align-items: normal
+  }
+  .select-nav{
+    margin-left: 15px;
   }
 
   .dropdown {
